[gd_scene load_steps=14 format=3 uid="uid://b0ru0lg7nigy3"]

[ext_resource type="Script" path="res://scripts/landing_zone.gd" id="1_8nlbd"]
[ext_resource type="Texture2D" uid="uid://hplgbvyrej4n" path="res://textures/moon_tile_2.png" id="1_oa5js"]
[ext_resource type="Environment" uid="uid://8ejtpobw34d6" path="res://mats/base_env.tres" id="2_cdxla"]
[ext_resource type="PackedScene" uid="uid://chviiwgpxoqs8" path="res://scenes/snaut_2.tscn" id="2_gtct7"]
[ext_resource type="Script" path="res://scripts/csg_box_3d.gd" id="2_ywxp8"]
[ext_resource type="PackedScene" uid="uid://c6yjnto64sfb3" path="res://scenes/jlxyr_of_umygrox.tscn" id="6_mof4q"]
[ext_resource type="PackedScene" uid="uid://7hbs1525kc22" path="res://scenes/scepter_1.tscn" id="8_3jb7o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nb0ec"]
size = Vector3(2.35254, 3.01685, 6.49499)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_danw1"]
albedo_color = Color(0.341176, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_loarn"]
albedo_color = Color(1, 0.247059, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pfycc"]
albedo_color = Color(1, 1, 0.0431373, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2u4on"]
size = Vector3(40.4664, 11.8788, 7.83875)

[sub_resource type="BoxShape3D" id="BoxShape3D_ommbr"]
size = Vector3(1, 1.07813, 1)

[node name="Landing_Zone" type="Node3D"]
script = ExtResource("1_8nlbd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_cdxla")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.428746, 0.903425, 0, -0.903425, 0.428746, 131.889, 175.143, 4.98253)

[node name="snaut2" parent="." instance=ExtResource("2_gtct7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.10766, 25.2646, 13.3737)

[node name="Skeleton3D" parent="snaut2/meshy_snaut/Armature" index="0"]
bones/0/position = Vector3(0.254988, -1.32019, -68.9501)
bones/0/rotation = Quaternion(-0.731521, 0.0257726, -0.0505857, 0.679452)
bones/1/rotation = Quaternion(0.0573658, -0.00702594, 0.0138324, 0.998233)
bones/2/position = Vector3(1.49012e-08, 12.3761, 7.45058e-09)
bones/2/rotation = Quaternion(0.0497505, -0.00600521, 0.0209176, 0.998525)
bones/3/position = Vector3(-1.04308e-07, 14.1442, 3.31551e-07)
bones/3/rotation = Quaternion(-0.0381508, -0.0100041, -0.00473941, 0.999211)
bones/4/rotation = Quaternion(0.00360294, 0.0289401, 0.0177379, 0.999417)
bones/5/rotation = Quaternion(0.0767261, 0.0462627, -0.0640436, 0.993917)
bones/7/rotation = Quaternion(0.607567, 0.404611, -0.514476, 0.449964)
bones/8/position = Vector3(1.19565e-06, 19.1506, -2.11181e-06)
bones/8/rotation = Quaternion(0.53623, 0.0223333, 0.0464546, 0.842497)
bones/9/rotation = Quaternion(-0.00875368, 0.0645258, 0.0911679, 0.993704)
bones/10/position = Vector3(1.60995e-06, 22.1038, -6.51786e-06)
bones/10/rotation = Quaternion(-0.0196979, 0.286898, -0.00648853, 0.957737)
bones/11/position = Vector3(-4.78744, 3.19319, -5.0068e-06)
bones/11/rotation = Quaternion(0.00438814, 0.00980697, 0.274102, 0.961641)
bones/12/position = Vector3(0.574366, 4.56777, 1.01451e-06)
bones/12/rotation = Quaternion(0.0892162, -0.00337637, -0.257649, 0.962105)
bones/13/position = Vector3(-1.41623, 5.88008, -1.22782e-06)
bones/13/rotation = Quaternion(0.0133058, -0.00247714, 0.129574, 0.991477)
bones/14/position = Vector3(0.84185, 4.1057, -5.95392e-06)
bones/15/position = Vector3(2.17295e-06, 11.4574, -1.02555e-05)
bones/15/rotation = Quaternion(0.0429461, 0.0234224, 0.0693967, 0.996389)
bones/16/position = Vector3(0.528769, 7.33521, 7.42118e-07)
bones/16/rotation = Quaternion(0.119099, -0.000523657, 0.019269, 0.992695)
bones/17/position = Vector3(-0.358635, 6.13156, 5.26274e-07)
bones/17/rotation = Quaternion(0.0894306, 0.00512468, 0.0744691, 0.993192)
bones/19/rotation = Quaternion(0.621377, -0.395812, 0.499633, 0.455621)
bones/20/position = Vector3(-2.23129e-06, 19.1506, 2.67518e-06)
bones/20/rotation = Quaternion(0.527039, -0.0364529, -0.0268216, 0.848635)
bones/21/position = Vector3(2.58466e-06, 15.4372, 2.80719e-06)
bones/21/rotation = Quaternion(-0.0257163, -0.126528, -0.13976, 0.981731)
bones/22/position = Vector3(2.29558e-06, 22.1029, 3.93536e-06)
bones/22/rotation = Quaternion(-0.0106345, -0.218754, 0.00739423, 0.975694)
bones/23/position = Vector3(4.39464, 3.52182, 1.16228e-06)
bones/23/rotation = Quaternion(0.066616, -0.0204994, -0.319113, 0.94515)
bones/24/position = Vector3(-0.751411, 4.44225, 4.80783e-06)
bones/24/rotation = Quaternion(0.0855077, 0.00468976, 0.292613, 0.952389)
bones/25/rotation = Quaternion(0.00942924, 0.000507372, -0.128595, 0.991652)
bones/26/position = Vector3(-0.843863, 4.6739, 1.89715e-06)
bones/27/position = Vector3(-4.09435e-06, 10.0001, 2.61032e-06)
bones/27/rotation = Quaternion(0.138985, -0.0145649, -0.0842015, 0.986601)
bones/28/position = Vector3(-1.06201, 7.98587, -4.25181e-06)
bones/28/rotation = Quaternion(0.170082, -0.00010086, 0.00910095, 0.985388)
bones/29/position = Vector3(0.637768, 6.65574, -4.34399e-07)
bones/29/rotation = Quaternion(0.137865, -0.0135401, -0.0905578, 0.98621)
bones/30/position = Vector3(0.424242, 5.03554, -2.14933e-06)
bones/31/position = Vector3(12.7036, -5.90075, 1.12569)
bones/31/rotation = Quaternion(0.091353, 0.0341663, 0.992295, -0.076405)
bones/32/position = Vector3(-1.07028e-06, 25.1318, 1.96653e-06)
bones/32/rotation = Quaternion(-0.204217, 0.0567652, 0.0578953, 0.975562)
bones/33/position = Vector3(-1.9291e-07, 21.1243, -8.52978e-07)
bones/33/rotation = Quaternion(0.549828, 0.0484733, -0.0439201, 0.832713)
bones/34/position = Vector3(1.98863e-06, 27.4745, 9.72289e-07)
bones/34/rotation = Quaternion(0.326236, -0.105264, 0.0365831, 0.938697)
bones/35/position = Vector3(-1.99866e-06, 10.4883, 1.64755e-07)
bones/36/position = Vector3(-12.7036, -5.90074, 1.03457)
bones/36/rotation = Quaternion(-0.0503115, 0.0173501, 0.997866, -0.0378227)
bones/37/position = Vector3(-4.37372e-07, 25.129, 2.95998e-07)
bones/37/rotation = Quaternion(-0.155904, -0.0256542, -0.0650502, 0.985294)
bones/38/rotation = Quaternion(0.517616, -0.0749156, -0.00658631, 0.852301)
bones/39/position = Vector3(2.14719e-07, 27.6502, 1.06831e-06)
bones/39/rotation = Quaternion(0.32374, 0.103708, -0.0357262, 0.939766)
bones/40/position = Vector3(-5.85141e-07, 10.4547, 1.65659e-07)

[node name="headAttachment3D" parent="snaut2/meshy_snaut/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.973448, 0.102839, 0.204505, -0.221988, 0.206128, 0.953012, 0.0558522, -0.973106, 0.223484, -0.155757, 4.16533, -134.782)

[node name="LhandAttachment3D" parent="snaut2/meshy_snaut/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.785648, 0.182555, -0.591127, -0.617201, 0.165392, -0.769225, -0.0426587, 0.969184, 0.242613, 34.0095, 5.16616, -78.0852)

[node name="RhandAttachment3D" parent="snaut2/meshy_snaut/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.875248, -0.109446, 0.47113, 0.483467, 0.226555, -0.845537, -0.0141968, 0.967829, 0.251205, -31.3181, 10.2869, -77.1205)

[node name="BoneAttachment3D" parent="snaut2/meshy_snaut/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.998139, -0.0139521, 0.0593584, -0.0582887, 0.0674897, 0.996016, -0.0179026, -0.997622, 0.0665508, 0.541823, 0.675552, -105.897)

[node name="diaSpace" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-2.94414, 0, -3.40325, 0, 4.5, 0, 3.40325, 0, -2.94414, 4.42533, 29.2743, 13.664)

[node name="playerText" type="Label3D" parent="diaSpace"]
unique_name_in_owner = true
billboard = 2
autowrap_mode = 2

[node name="alienText" type="Label3D" parent="diaSpace"]
unique_name_in_owner = true
billboard = 2

[node name="SpringArm3D" type="SpringArm3D" parent="diaSpace"]

[node name="diaCam" type="Camera3D" parent="diaSpace/SpringArm3D"]
unique_name_in_owner = true

[node name="Ground" type="CSGBox3D" parent="." groups=["Ground"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8783, -27.8294, -1.9942)
use_collision = true
size = Vector3(285.787, 106.18, 367.913)
script = ExtResource("2_ywxp8")
texture = ExtResource("1_oa5js")
curvature = 0.05
tile_factor = 50.0

[node name="Jlxyr_of_Umygrox" parent="." instance=ExtResource("6_mof4q")]
unique_name_in_owner = true
transform = Transform3D(-4.5, 0, -3.93402e-07, 0, 4.5, 0, 3.93402e-07, 0, -4.5, 4.88159, 25.2606, 16.8885)

[node name="alien1" parent="Jlxyr_of_Umygrox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Skeleton3D" parent="Jlxyr_of_Umygrox/alien1/Armature" index="0"]
bones/0/position = Vector3(0.0888233, -0.286861, -31.7275)
bones/0/rotation = Quaternion(-0.501521, -0.522828, 0.523066, 0.44892)
bones/1/rotation = Quaternion(0.02509, 0.0112228, 0.0481505, 0.998462)
bones/2/rotation = Quaternion(0.016958, 0.000729098, -0.0120434, 0.999783)
bones/3/rotation = Quaternion(0.0170382, 0.000867101, -0.0118192, 0.999785)
bones/4/rotation = Quaternion(0.0177712, -0.00703206, -0.139169, 0.990084)
bones/5/rotation = Quaternion(0.00774076, -0.00668432, 0.169122, 0.985542)
bones/7/rotation = Quaternion(-0.104915, -0.515314, 0.849161, -0.0486771)
bones/8/rotation = Quaternion(0.489406, 0.141909, 0.0359813, 0.85968)
bones/9/rotation = Quaternion(0.0105044, -0.399193, 0.0167917, 0.916653)
bones/10/rotation = Quaternion(0.0554968, 0.304047, 0.018749, 0.950854)
bones/11/rotation = Quaternion(0.108066, 0.0348143, 0.298838, 0.947526)
bones/12/rotation = Quaternion(-0.0456764, 0.0793625, -0.294427, 0.951277)
bones/13/rotation = Quaternion(-0.123648, -0.0718195, 0.121648, 0.982219)
bones/15/rotation = Quaternion(0.007597, 0.0169154, 0.040113, 0.999023)
bones/16/rotation = Quaternion(0.148853, 0.000338712, -0.0466219, 0.98776)
bones/17/rotation = Quaternion(0.0684552, 0.00519426, 0.0788396, 0.994521)
bones/19/rotation = Quaternion(0.862084, 0.034963, -0.091895, 0.497135)
bones/20/rotation = Quaternion(0.40531, -0.206742, -0.0729217, 0.887504)
bones/21/rotation = Quaternion(0.0211129, 0.394671, -0.0342663, 0.917941)
bones/22/rotation = Quaternion(0.0276774, -0.38443, -0.00639684, 0.922717)
bones/23/position = Vector3(0.623041, 1.21889, 8.49344e-07)
bones/23/rotation = Quaternion(0.197362, -0.00691127, -0.341404, 0.918936)
bones/24/position = Vector3(0.0629356, 1.09332, -2.75226e-07)
bones/24/rotation = Quaternion(-0.0750356, -0.053133, 0.286728, 0.95359)
bones/25/rotation = Quaternion(-0.167686, 0.0454517, -0.378604, 0.909106)
bones/27/position = Vector3(-9.70199e-07, 2.30057, -1.7969e-06)
bones/27/rotation = Quaternion(-0.143114, -0.0251657, 0.0530254, 0.987964)
bones/28/position = Vector3(-0.0838137, 1.16104, -3.67601e-07)
bones/28/rotation = Quaternion(0.094622, 0.00191724, 0.0855118, 0.991832)
bones/29/rotation = Quaternion(0.0100968, -0.00649143, -0.0872299, 0.996116)
bones/31/rotation = Quaternion(0.132118, -0.0658518, 0.985532, -0.083283)
bones/32/rotation = Quaternion(-0.0498289, -0.0197613, -0.133974, 0.989534)
bones/33/rotation = Quaternion(0.275463, -0.712809, 0.344611, 0.545221)
bones/34/rotation = Quaternion(0.246515, -0.0855929, 0.0126198, 0.965269)
bones/36/rotation = Quaternion(-0.0888149, -0.0300347, 0.995595, -0.000613749)
bones/37/rotation = Quaternion(0.0396212, 0.084652, -0.092105, 0.991353)
bones/38/rotation = Quaternion(0.393442, -0.530215, 0.277224, 0.698013)
bones/39/rotation = Quaternion(0.268175, 0.0876938, -0.0105724, 0.959312)

[node name="SpringArm3D" type="SpringArm3D" parent="Jlxyr_of_Umygrox"]
transform = Transform3D(0.998255, 0, -0.059045, 0, 1, 0, 0.059045, 0, 0.998255, 0.0901743, 0.396343, -0.00873351)

[node name="startCam" type="Camera3D" parent="Jlxyr_of_Umygrox/SpringArm3D"]
unique_name_in_owner = true

[node name="restStop" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100433, -142.975, 14.9168)

[node name="CSGBox3D" type="CSGBox3D" parent="restStop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.386002, 0)
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(1.86383, 0.140137, 1.69733)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.07021, 28.2642, 15.3199)

[node name="Objectives" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.9474, 25.7955, 48.6859)

[node name="Scepter" type="Node3D" parent="Objectives"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6225, 6.74379, -1.95213)

[node name="scepterArea" type="Area3D" parent="Objectives/Scepter"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Objectives/Scepter/scepterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.67627, 1.00842, 0.551689)
shape = SubResource("BoxShape3D_nb0ec")

[node name="Course" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.80496, 23.0606, 41.6358)

[node name="blue" type="CSGBox3D" parent="Course"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.93548, 4.55569, 5.6674)
use_collision = true
size = Vector3(9.14758, 4.67328, 4.47656)
material = SubResource("StandardMaterial3D_danw1")

[node name="purple" type="CSGBox3D" parent="Course"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.23319, 3.1892, 5.6674)
use_collision = true
size = Vector3(7.52881, 2.97659, 4.47656)
material = SubResource("StandardMaterial3D_loarn")

[node name="yellow" type="CSGBox3D" parent="Course"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.9377, 5.49367, 5.85017)
use_collision = true
size = Vector3(13.1724, 6.54913, 7.33343)
material = SubResource("StandardMaterial3D_pfycc")

[node name="courseArea" type="Area3D" parent="Course"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Course/courseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.95441, 8.15703, 5.6269)
shape = SubResource("BoxShape3D_2u4on")

[node name="Scepter_1" parent="." instance=ExtResource("8_3jb7o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.5074, 28.66, 26.0751)

[node name="scepterStart" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 33.0196, 32.5046, 46.6861)

[node name="scepterPre" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.5, 0, -3.93402e-07, 0, 4.5, 0, 3.93402e-07, 0, -4.5, 9.31689, 27.5567, 18.971)

[node name="ending" type="Node3D" parent="."]
transform = Transform3D(-4.5, 0, -3.93402e-07, 0, 4.5, 0, 3.93402e-07, 0, -4.5, 4.88159, 25.2606, 16.8885)

[node name="endZone" type="Area3D" parent="ending"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ending/endZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-07, 0.438221, 0.561602)
shape = SubResource("BoxShape3D_ommbr")

[connection signal="body_entered" from="Objectives/Scepter/scepterArea" to="." method="_on_scepter_area_body_entered"]
[connection signal="body_entered" from="Course/courseArea" to="." method="_on_course_area_body_entered"]
[connection signal="body_exited" from="Course/courseArea" to="." method="_on_course_area_body_exited"]
[connection signal="body_entered" from="ending/endZone" to="." method="_on_end_zone_body_entered"]

[editable path="snaut2"]
[editable path="snaut2/meshy_snaut"]
[editable path="Jlxyr_of_Umygrox"]
[editable path="Jlxyr_of_Umygrox/alien1"]
